CHANGES
=======
* fix setup.cfg with upper case readme for pip install
* fix build_dem indentation
* allow to reload project in edition mode after an interuption on Exception

* updated to Metashape 2.x.x api
* Connect to Zenodo for versioning

v0.1.12
-------

* clean-up v2
* clean-up

v0.1.11
-------

* Update MetashapeProcessing.py
* Update MetashapeProcessing.py
* Update MetashapeProcessing.py
* Update MetashapeProcessing.py
* bugfixing

v0.1.10
-------

* Update MetashapeProcessing.py

v0.1.9
------

* Update MetashapeProcessing.py
* added support for gcp accuracies and contours

v0.1.8
------

* Update MetashapeProcessing.py
* Improved version check
* Delete ChangeLog

v0.1.7
------

* Update .gitignore
* Bug fix in version checking
* implemented network\_root path

v0.1.6
------

* bugfix

v0.1.5
------

* bugfix
* Update ChangeLog
* v0.1.5
* bugfix, add version check
* bug fix in dense cloud classify / added version check / improved dense cloud filtering method

v0.1.4
------

* bugfix

v0.1.3
------

* split depth maps from dense cloud generation
* Update ChangeLog

v0.1.2
------

* logging bug fixes, export bugfix
* License // filesystem // configuration updates
* Update README.md
* Update ChangeLog

v0.1.1
------

* Both analysis and additional features successfully implemented. Still a bug in Uploading models
* bugfix with analyze\_photos
* logging bugfix
* masks\_functional
* bugfix
* bugfix
* bugfix mask path
* bugfix in masks
* mask bugfix
* bugfix
* bugfix
* gcp\_crs bugfix
* Bugfix of quality\_cutoff in analyze photos
* Update close-range\_photogrammetry.yml
* fixed quality selection based on image quality analysis
* Delete Untitled.ipynb
* added image analysis and updated dicts based on v1.7 reference, including publish
* bugfix in gcps
* Update README.md

v0.1.0
------

* Created a Package
* logging Bugfix
* Branch to be used for structuring the work into a package
* bugfix
* bugfix
* Bugfix buildTiledModel
* added buildTexture